--- a/src/templates/club_base.html
+++ b/src/templates/club_base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/static/club_base_style.css">
+    <link rel="stylesheet" type="text/css" href="/css_js/club_base_style.css">
     <title></title>
 </head>
 <body>
@@ -79,6 +79,6 @@
     {% block club_users %}{% endblock %}
 </div>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
-<script src="/static/club_base_script.js"></script>
+<script src="/css_js/club_base_script.js"></script>
 </body>
 </html>
