--- a/src/templates/club_user.html
+++ b/src/templates/club_user.html
@@ -17,7 +17,7 @@
 
 
 {% block href_main %}
-<a href="/pages/main_user/{{user_info.id}}">
+<a href="/pages/main_user/{{user_info.id}}" style="text-decoration: none">
     <button class="btn_GoToTheClub" type="button" style="margin-top: 20px">
         <strong>На главную</strong>
         <div id="container-stars">
