--- a/src/templates/profile_base.html
+++ b/src/templates/profile_base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/profile_base_style.css">
+    <link rel="stylesheet" href="/css_js/profile_base_style.css">
     <title></title>
 </head>
 <body>
@@ -12,9 +12,8 @@
 
 
     <!--Уровень User-->
-    <nav>
-        <div style="display: inline-block" class="star-icon"></div>
-        <div style="margin-block: 10px;display: inline-block" class="experience-bar">
+    <nav style="padding: 10px">
+        <div style="margin-block: 10px; display: inline-block" class="experience-bar">
             <div class="experience-fill">
                 {% block level %}{% endblock %}
             </div>
@@ -29,12 +28,12 @@
                 <label for="avatar-input">
                     <div id="avatar-circle">
                         <span id="choose-text">Вставьте фото</span>
-                        <img id="avatar-image" src="placeholder.jpg" alt="Вставьте фото">
+                        <img id="avatar-image" src="/images/placeholder.jpg" alt="Вставьте фото">
                     </div>
                 </label>
                 <input type="file" id="avatar-input" accept="image/*"/>
             </div>
-            {% block name %}{% endblock %}
+            <center>{% block name %}{% endblock %}</center>
         </div>
 
         <!--Достижения-->
@@ -49,7 +48,7 @@
 
 
     <!--Инфа о user в виде формочки-->
-    <div class="form-container" style="margin-top: 30px">
+    <div class="form-container" style="margin-top: 35px">
         <form class="form" id="form">
             <div style="display: flex">
                 {% block dob %}{% endblock %}
@@ -69,6 +68,6 @@
 
 </div>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
-<script src="/static/profile_base_script.js"></script>
+<script src="/css_js/profile_base_script.js"></script>
 </body>
 </html>
