--- a/src/templates/club_base.html
+++ b/src/templates/club_base.html
@@ -68,13 +68,17 @@
     </div>
 
 
-    <!-- Участники-->
+    <!-- "Участники" надпись -->
     <div class="card"
          style="left: 20px;height: 50px; width: 350px; justify-content: center;display: flex">
-        <h1 style="font-size: 20px; color: #7a9a8a;position: relative; z-index: 2">Участники</h1>
+        <h1 style="font-size: 20px;position: relative; z-index: 2">Участники</h1>
     </div>
 
+
+    <!-- Список участников -->
     {% block club_users %}{% endblock %}
+
+
 </div>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 <script src="/css_js/club_base_script.js"></script>
