--- a/src/static/css_js/main_base_style.css
+++ b/src/static/css_js/main_base_style.css
@@ -86,7 +86,7 @@ nav {
     width: 33%;
 }
 
-.JoinEvent {
+.RegEvent {
     display: inline-block;
     padding: 10px 20px;
     border: none;
@@ -97,8 +97,22 @@ nav {
     transition: background .2s linear;
 }
 
-.JoinEvent:hover {
+.RegEvent:hover {
     background: rgb(85, 255, 112);
+}
+
+.DisregEvent {
+    padding: 10px 20px;
+    border: none;
+    background: rgba(255, 85, 85, 0.62);
+    border-radius: 10px;
+    text-transform: uppercase;
+    font-weight: 700;
+    transition: background .2s linear;
+}
+
+.DisregEvent:hover {
+    background: rgb(255, 85, 85);
 }
 
 .form-container {
