--- a/src/static/css_js/main_base_style.css
+++ b/src/static/css_js/main_base_style.css
@@ -86,6 +86,14 @@ nav {
     width: 33%;
 }
 
+.block5 {
+    width: 50%;
+}
+
+.block6 {
+    width: 50%;
+}
+
 .RegEvent {
     display: inline-block;
     padding: 10px 20px;
@@ -113,6 +121,48 @@ nav {
 
 .DisregEvent:hover {
     background: rgb(255, 85, 85);
+}
+
+.EditEvent {
+    padding: 10px 20px;
+    border: none;
+    background: rgba(117, 203, 255, 0.62);
+    border-radius: 10px;
+    text-transform: uppercase;
+    font-weight: 700;
+    transition: background .2s linear;
+}
+
+.EditEvent:hover {
+    background: rgb(117, 203, 255);
+}
+
+.SaveEvent {
+    padding: 10px 20px;
+    border: none;
+    background: rgba(117, 203, 255, 0.62);
+    border-radius: 10px;
+    text-transform: uppercase;
+    font-weight: 700;
+    transition: background .2s linear;
+}
+
+.SaveEvent:hover {
+    background: rgb(117, 203, 255);
+}
+
+.EndEvent {
+    padding: 10px 20px;
+    border: none;
+    background: rgba(145, 56, 0, 0.62);
+    border-radius: 10px;
+    text-transform: uppercase;
+    font-weight: 700;
+    transition: background .2s linear;
+}
+
+.EndEvent:hover {
+    background: rgb(145, 56, 0);
 }
 
 .form-container {
