Not worked disjoin

--- a/src/templates/main_user.html
+++ b/src/templates/main_user.html
@@ -42,7 +42,7 @@
 <!--события-->
 <div class="form-container" style="margin-top: 30px">
     <form class="form" id="form">
-        <h1 style="font-size: 15px;position: relative; z-index: 2">Событие</h1>
+        <h1 id="Name_{{event.id}}" style="font-size: 15px;position: relative; z-index: 2">{{ event.name }}</h1>
         <div style="display: flex">
             <div class="form-group" style="width: 60%">
                 <label for="Date_{{event.id}}">Дата</label>
