--- a/src/templates/club_user.html
+++ b/src/templates/club_user.html
@@ -48,16 +48,16 @@
 
 
     {% elif user_info.role == "owner" and user.role == "member" %}
-    <button type="button" class="Promote" id="Promote_{{ user.user_id }}" style="font-size: 10px;margin-top: 5px;height: 20px; width: 80px;"
-            onclick="Promote('{{user.user_id}}')">Повысить
+    <button type="button" class="Promote" id="Update_{{ user.user_id }}" style="font-size: 10px;margin-top: 5px;height: 20px; width: 80px;"
+            onclick="Update('{{user.user_id}}')">Повысить
     </button>
     <button type="button" class="Kick" id="Kick_{{ user.user_id }}" style="margin-top: 5px;height: 20px; width: 80px;"
             onclick="Kick('{{user.user_id}}')">Выгнать
     </button>
 
     {% elif user_info.role == "owner" and user.role == "admin" %}
-    <button type="button" class="Demote" id="Demote_{{ user.user_id }}" style="margin-top: 5px;height: 20px; width: 80px;"
-            onclick="Demote('{{user.user_id}}')">Понизить
+    <button type="button" class="Demote" id="Update_{{ user.user_id }}" style="margin-top: 5px;height: 20px; width: 80px;"
+            onclick="Update('{{user.user_id}}')">Понизить
     </button>
     <button type="button" class="Kick" id="Kick_{{ user.user_id }}" style="margin-top: 5px;height: 20px; width: 80px;"
             onclick="Kick('{{user.user_id}}')">Выгнать
