--- a/src/templates/main_base.html
+++ b/src/templates/main_base.html
@@ -85,14 +85,7 @@
     </div>
 
 
-    <!-- События-->
-    <div class="card"
-         style="left: 50px;height: 50px; width: 290px; justify-content: center;display: flex">
-        <h1 style="font-size: 19px; position: relative; z-index: 2">СОБЫТИЯ</h1>
-    </div>
-
-
-    <!--Далее перечисление событий-->
+    <!-- "События" + перечисление событий-->
     {% block content %}{% endblock %}
 
 
