--- a/src/templates/profile_user.html
+++ b/src/templates/profile_user.html
@@ -59,6 +59,7 @@
 
 
 {% block href_main %}
+{% if user_info.exist_clubs == 1 %}
 <a href="/pages/main_user/{{user_info.id}}" style="text-decoration: none">
     <button class="btn_GoToTheClub" type="button" style="margin-top: 25px">
         <strong>На главную</strong>
@@ -71,4 +72,18 @@
         </div>
     </button>
 </a>
+{% else %}
+<a href="/pages/search_user/{{user_info.id}}" style="text-decoration: none">
+    <button class="btn_GoToTheClub" type="button" style="margin-top: 25px">
+        <strong>На главную</strong>
+        <div id="container-stars">
+            <div id="stars"></div>
+        </div>
+        <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+        </div>
+    </button>
+</a>
+{% endif %}
 {% endblock %}
