--- a/src/templates/search_base.html
+++ b/src/templates/search_base.html
@@ -13,6 +13,8 @@
 
     <!-- Поиск поле -->
     <input id="input_search" type="text" placeholder="Введите тэг клуба" class="text-xl">
+
+
     <!-- кнопка "искать" -->
     <button onclick= "searchClub()" class="SearchClub">Найти</button>
 
@@ -21,14 +23,7 @@
     {% block found %}{% endblock %}
 
 
-    <!-- Главный клуб -->
-    <div class="card"
-         style="left: 70px;height: 40px; width: 250px; justify-content: center;display: flex">
-        <h1 style="font-size: 18px; position: relative; z-index: 2">Главный клуб</h1>
-    </div>
-
-
-    <!-- Club_name + "перейти" + ссылка в main_user -->
+    <!-- "Главный клуб" + Club_name + "перейти" + ссылка в main_user -->
     {% block main_club %}{% endblock %}
 
 
@@ -36,14 +31,7 @@
     {% block href_main %}{% endblock %}
 
 
-    <!-- Другие клубы -->
-    <div class="card"
-         style="margin-top: 50px;left: 50px;height: 50px; width: 290px; justify-content: center;display: flex">
-        <h1 style="font-size: 19px; position: relative; z-index: 2">Другие клубы</h1>
-    </div>
-
-
-    <!-- Club_names + "перейти" + ссылка в main_user -->
+    <!-- "Другие клубы" + Club_names + "перейти" + ссылка в main_user -->
     {% block clubs_info %}{% endblock %}
 </div>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
