--- a/src/static/css_js/main_base_style.css
+++ b/src/static/css_js/main_base_style.css
@@ -230,3 +230,58 @@ nav {
     outline: none;
     border-color: rgba(135, 29, 255, 0.72);
 }
+
+.BeginEvent{
+    font-size: 16px;
+    margin-top: 5px;
+    vertical-align: center;
+    display: inline-block;
+    height: 40px;
+    padding: 10px 20px;
+    border: none;
+    background: rgba(85, 255, 112, 0.62);
+    border-radius: 10px;
+    text-transform: uppercase;
+    font-weight: 700;
+    transition: background .2s linear;
+}
+
+.BeginEvent:hover {
+    background: rgb(85, 255, 112);
+
+}
+
+.CloseEvent{
+    font-size: 16px;
+    margin-top: 5px;
+    vertical-align: center;
+    display: inline-block;
+    height: 40px;
+    padding: 10px 20px;
+    border: none;
+    background: rgba(255, 85, 85, 0.62);
+    border-radius: 10px;
+    text-transform: uppercase;
+    font-weight: 700;
+    transition: background .2s linear;
+}
+
+.CloseEvent:hover {
+    background: rgb(255, 85, 85);
+
+}
+
+.CreateEvent{
+    display: inline-block;
+    padding: 10px 20px;
+    border: none;
+    background: rgba(117, 203, 255, 0.62);
+    border-radius: 10px;
+    text-transform: uppercase;
+    font-weight: 700;
+    transition: background .2s linear;
+}
+
+.CreateEvent:hover {
+    background: rgb(117, 203, 255);
+}
