--- a/src/templates/club_user.html
+++ b/src/templates/club_user.html
@@ -23,12 +23,13 @@
         <h1 style="bottom: 5px;font-size: 12px; color: #7a9a8a;position: relative; z-index: 2">
             Пригласить друга</h1>
     </button>
-    {% if user_info.role == "admin" %}
+    {% if user_info.role == "owner" %}
     <button class="card" onclick=GetStatistics()
             style="top: 80px;height: 60px; width: 100px; justify-content: center; vertical-align: center">
         <h1 style="bottom: 5px;font-size: 12px; color: #7a9a8a;position: relative; z-index: 2">
             Получить статистику</h1>
     </button>
+    {% endif %}
 </div>
 {% endblock %}
 
